--- a/Android/BusTicketPassenger/res/values/strings.xml
+++ b/Android/BusTicketPassenger/res/values/strings.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string-array name="card_types">
+        <item>Visa</item>
+        <item>MasterCard</item>
+    </string-array>
+
     <string name="app_name">BusTicketPassenger</string>
     <string name="action_settings">Settings</string>
     <string name="label_login_username">Username</string>
@@ -21,10 +26,16 @@
     <string name="label_register_card_number">Card Number</string>
     <string name="hint_register_card_number">Card Number</string>
     <string name="label_register_card_validity">Card Validity</string>
-    
-    <string-array name="card_types">
-        <item>Visa</item>
-        <item>MasterCard</item>
-    </string-array>
+    <string name="label_buy_tickets">Buy Tickets</string>
+    <string name="label_type">Type</string>
+    <string name="label_quantity">Quantity</string>
+    <string name="label_t1">T1</string>
+    <string name="title_activity_buy">BuyActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="button_change">Change</string>
+    <string name="label_t2">T2</string>
+    <string name="label_t3">T3</string>
+    <string name="buy">Buy</string>
+    <string name="title_activity_view_tickets">ViewTicketsActivity</string>
 
 </resources>
