--- a/Android/StockPortfolio/res/values/strings.xml
+++ b/Android/StockPortfolio/res/values/strings.xml
@@ -4,5 +4,19 @@
     <string name="app_name">StockPortfolio</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_add_quotes">AddQuotesActivity</string>
+    <string name="action_add_quote">Add Quote</string>
+    
+    <string-array name="usual_quotes">
+        <item name="GOOG">GOOG</item>
+        <item name="IBM">IBM</item>
+        <item name="MSFT">MSFT</item>
+        <item name="DELL">DELL</item>
+        <item name="CSCO">CSCO</item>
+        <item name="AMZN">AMZN</item>
+        <item name="HPQ">HPQ</item>
+        <item name="AAPL">AAPL</item>
+        <item name="ORCL">ORCL</item>
+    </string-array>
 
 </resources>
