--- a/Android/StockPortfolio/res/values/strings.xml
+++ b/Android/StockPortfolio/res/values/strings.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">StockPortfolio</string>
+    <string name="app_name">STOX</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_add_quotes">AddQuotesActivity</string>
     <string name="action_add_quote">Add Quote</string>
+    <string name="navigation_drawer_open">Open Drawer</string>
+    <string name="navigation_drawer_close">Close Drawer</string>
+    
     
     <string-array name="usual_quotes">
         <item name="GOOG">GOOG</item>
